--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,5 +11,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.example.ts"]
+  "exclude": ["node_modules", "dist"]
 }
